--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -61,6 +61,8 @@
     position: relative;
 
     .navbar-toggle {
+        margin-top: 17px;
+
         &:focus,
         &:hover {
             background-color: initial;
@@ -147,6 +149,7 @@
 
                     li {
                         border-bottom: 1px solid lighten($mainColor, 2%);
+
                         &:last-of-type {
                             border-bottom: 0;
                         }
@@ -277,6 +280,7 @@
 @media (max-width: $screen-sm-max) {
     .navbar-header {
         float: none;
+        position: relative;
     }
     .navbar-left, .navbar-right {
         float: none !important;
@@ -330,6 +334,35 @@
     .searchToggle {
         position: relative;
         display: inline-block;
+
+        @media (max-width: $screen-sm-max) {
+            display: none;
+        }
+
+        &.mobile {
+            display: none;
+            position: static;
+
+            .searchToggleButton {
+                left: 400px;
+                top: 19px;
+                width: 131px;
+                height: 31px;
+                border-radius: 20px;
+
+                @media (max-width: $screen-xs-max) {
+                    left: 177px;
+                    top: 15px;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                }
+            }
+
+            @media (max-width: $screen-sm-max) {
+                display: inline-block;
+            }
+        }
     }
 
     @media (max-width: $screen-sm-max) {
@@ -351,7 +384,7 @@
         height: 31px;
         border-radius: 20px;
         border: 1px solid $secondaryColor;
-        box-shadow: 0 0 3px rgba(0,0,0,0.3);
+        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 
         background-color: lighten($secondaryColor, 5%);
         color: #fff;
@@ -369,7 +402,7 @@
 
         &.pressed {
             border: 1px solid $secondaryColor;
-            box-shadow: inset 0 0 3px rgba(0,0,0,0.3);
+            box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
             background-color: $secondaryColor;
         }
 
@@ -377,6 +410,21 @@
             position: relative;
             top: 3px;
             width: 14px;
+
+            @media (max-width: $screen-xs-max) {
+                top: 7px;
+                width: 21px;
+            }
+        }
+    }
+
+    @media (max-width: $screen-xs-max) {
+        .searchBarContainer {
+            display: none
+        }
+
+        span.searchToggleButtonText {
+            display: none;
         }
     }
 }
