--- a/resources/assets/sass/components/image-modal.scss
+++ b/resources/assets/sass/components/image-modal.scss
@@ -11,5 +11,16 @@
     position: absolute;
     top: 20px;
     right: 20px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #fff;
+    border-radius: 50%;
+    color: #ff5b49;
+    width: 40px;
+    height: 40px;
+    opacity: 0.4;
   }
 }
