--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -38,6 +38,7 @@
 @import "components/image-modal";
 @import "components/spinner";
 @import "components/confirm-dialog";
+@import "components/scroll-top-button";
 
 // Modules
 @import "modules/online-users";
