--- a/resources/assets/sass/views/contact.scss
+++ b/resources/assets/sass/views/contact.scss
@@ -2,9 +2,14 @@
     &__title {
         font-weight: 500;
         color: #444;
+        padding-left: 20px;
     }
 
     &__value {
         font-style: italic;
     }
+}
+
+.CompanyInfo__Tile__body {
+    padding: 0;
 }
