--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -1,4 +1,52 @@
 .EditProfile {
+    .imageResource {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .imageResourceWrapper {
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+
+    @media screen and (max-width: $screen-xs-max) {
+        .userImageFullItem {
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: $screen-sm-min) {
+        .imageResourceWrapper {
+            width: 100%;
+            height: 400px;
+            overflow: hidden;
+            margin-bottom: 5px;
+        }
+
+        .userImageFullItem {
+            height: 500px;
+        }
+    }
+
+    .profileImageLabel {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 30px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background-color: rgba(0, 0, 0, 0.3);
+        font-weight: 400;
+        color: $white;
+        font-size: 1.7rem;
+    }
+
     .material-icon-calendar {
         font-size: 17px;
     }
