--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -11,6 +11,10 @@
         position: relative;
     }
 
+    .userImageFullItem.noImage {
+        height: initial;
+    }
+
     @media screen and (max-width: $screen-xs-max) {
         .userImageFullItem {
             margin-bottom: 30px;
