--- a/resources/assets/sass/views/edit-profile.scss
+++ b/resources/assets/sass/views/edit-profile.scss
@@ -1,4 +1,12 @@
 .EditProfile {
+    .imagesWrapper.overflown {
+        max-height: 550px;
+        padding: 20px;
+        padding-bottom: 0;
+        overflow: scroll;
+        box-shadow: inset 0px 0px 28px rgba(0,0,0,0.3);
+    }
+
     .imageResource {
         width: 100%;
         height: 100%;
