--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -224,6 +224,7 @@
         border-top: 0;
         text-align: center;
         width: 100px;
+        z-index: 1000;
 
         a {
             color: $white;
