--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -145,6 +145,7 @@
         position: relative;
         padding: 10px;
         text-align: right;
+        background-color: $mainColor;
 
         img {
             height: 150px;
