--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -470,6 +470,10 @@
                     height: calc(100% - 126px);
                 }
             }
+
+            .PrivateChatItem__body__content {
+                padding-bottom: 10px;
+            }
         }
 
         &:not(.PrivateChatItem--showingPreview) {
@@ -479,6 +483,11 @@
 
             .PrivateChatItem__textarea__container {
                 height: 100%;
+            }
+
+            .PrivateChatItem__body__content {
+                height: calc(100% - 150px);
+                padding-bottom: 10px;
             }
         }
 
@@ -559,8 +568,7 @@
         }
 
         &__content {
-            height: 100%;
-            padding-bottom: 20%;
+            height: 80%;
         }
     }
 
