--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -72,27 +72,34 @@
     }
 
     &__sendMessage {
-        border: 1px solid #ddd;
+        border: 0;
         position: absolute;
         top: -25px;
         display: flex;
         justify-content: center;
         align-items: center;
 
-        width: 50px;
-        height: 50px;
+        width: 110px;
+        height: 45px;
         border-radius: 50%;
-        background-color: $white;
+        background-color: $tertiaryColor;
 
         cursor: pointer;
+
+        &__text {
+            font-size: 2rem;
+            font-weight: 500;
+            color: $white;
+        }
 
         &__icon {
             font-size: 26px;
             color: $secondaryColor;
+            margin-left: 10px;
         }
 
         &:hover {
-            background-color: #eee;
+            background-color: $mainColor;
         }
     }
 
