style chat button

--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -82,7 +82,7 @@
         width: 110px;
         height: 45px;
         border-radius: 50%;
-        background-color: $tertiaryColor;
+        background-color: lighten($secondaryColor, 5%);
 
         cursor: pointer;
 
@@ -94,12 +94,12 @@
 
         &__icon {
             font-size: 26px;
-            color: $secondaryColor;
-            margin-left: 10px;
+            color: $white;
+            margin-left: 5px;
         }
 
         &:hover {
-            background-color: $mainColor;
+            background-color: $secondaryColor;
         }
     }
 
