--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -138,6 +138,15 @@
         .loader {
             cursor: initial;
         }
+
+        .PrivateChatItem__messageCounter {
+            position: absolute;
+            top: 3px;
+            right: 15px;
+            font-size: 1.5rem;
+            font-weight: 400;
+            color: $secondaryColor;
+        }
     }
 
     &__imagePreview {
