milestones && welcome modal

--- a/resources/assets/sass/components/button.scss
+++ b/resources/assets/sass/components/button.scss
@@ -21,6 +21,14 @@
     color: map_get($button, font-color);
     text-align: center;
 
+    &.whiteFont {
+        color: $white;
+
+        &:hover {
+            color: $white;
+        }
+    }
+
     &.Button-fw {
         width: 100%;
     }
