major LP registration rework and inital search, edit profile dob and city

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,7 +5,7 @@
 
 @import "brand";
 
-// Bootstrap
+// BootstrapPrev
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
 
