fix dob and city in profiles

--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -28,7 +28,20 @@
         position: relative;
     }
 
+    .modalImage {
+        .onlineCircle {
+            position: absolute;
+            background-color: #33e23c;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            right: 15px;
+            top: 15px;
+        }
+    }
+
     &__nonProfileImageWrapper {
+        position: relative;
         display: inline-block;
         vertical-align: top;
         overflow: hidden;
