--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -372,7 +372,8 @@
         width: 74%;
         overflow: scroll;
         resize: none;
-        font-size: 16px;
+        font-size: 1.7rem;
+        font-weight: 400;
         letter-spacing: 0.3px;
         line-height: 18px;
         padding: 8px 14px 7px 5px;
