--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,9 @@
 
 // BootstrapPrev
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+@media (min-width: $screen-xs-min) {
+  @include make-grid(xs);
+}
 @import "~bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css";
 
 // Jquery Autocomplete
