profile view email implementation

--- a/resources/assets/sass/components/private-chat-item.scss
+++ b/resources/assets/sass/components/private-chat-item.scss
@@ -326,7 +326,7 @@
         min-height: 10px;
         border-radius: 5px;
         margin-bottom: 10px;
-        word-break: break-all;
+        overflow: hidden;
         width: 75%;
         font-size: 15px;
         letter-spacing: 0.2px;
