--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -57,7 +57,7 @@
 
 .navbar-default {
     border: $navbarBorderWidth + px solid $navbarBgColor;
-    background-color: $navbarBgColor;
+    background: linear-gradient(60deg, $mainColor, darken($tertiaryColor, 3%));
     position: relative;
     border-radius: 0;
 
@@ -141,7 +141,7 @@
             }
 
             > a {
-                background-color: $navbarBgColor;
+                background-color: transparent;
                 line-height: $navbarLineHeight + px;
                 padding-top: ($navbarHeight - $navbarLineHeight - 2 * $navbarBorderWidth) / 2 + px;
                 padding-bottom: ($navbarHeight - $navbarLineHeight - 2 * $navbarBorderWidth) / 2 + px;
@@ -186,7 +186,7 @@
 
                 .dropdown-menu {
                     padding: 0;
-                    background-color: $mainColor;
+                    // background-color: $mainColor;
 
                     li {
                         border-bottom: 1px solid lighten($mainColor, 2%);
@@ -203,11 +203,16 @@
                         font-size: 16px;
 
                         @media (min-width: $screen-md-min) {
-                            background-color: darken($mainColor, 2%);
+                            background: linear-gradient(60deg, darken($tertiaryColor, 4%), darken($tertiaryColor, 5%));
                         }
 
                         &:hover {
-                            background-color: darken($mainColor, 2%);
+                            //background-color: darken($mainColor, 2%);
+                            color: darken($navbarLinkColor, 15%);
+                        }
+
+                        &:hover {
+                            //background-color: darken($mainColor, 2%);
                             color: darken($navbarLinkColor, 15%);
                         }
 
@@ -218,7 +223,7 @@
                 @media (min-width: $screen-md-min) {
                     &.open {
                         > a {
-                            background-color: darken($mainColor, 2%);
+                            //background-color: darken($mainColor, 2%);
                             color: $white;
                         }
                     }
@@ -385,13 +390,13 @@
         align-items: center;
         font-weight: 500;
         font-size: 2rem;
-        background-color: #bf5252;
+        background-color: #b97c7c;
         border-radius: 20px;
         color: $white;
         text-decoration: none;
 
         &:hover {
-            background-color: darken(#bf5252, 4%);
+            background-color: darken(#b97c7c, 4%);
         }
 
         @media (max-width: $screen-md-max) {
@@ -422,10 +427,10 @@
         width: 131px;
         height: 31px;
         border-radius: 20px;
-        border: 1px solid $secondaryColor;
+        //border: 1px solid $secondaryColor;
         box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 
-        background-color: lighten($secondaryColor, 5%);
+        background-color: #d47863;
         color: #fff;
         font-weight: 400;
 
@@ -451,7 +456,7 @@
         }
 
         &:hover {
-            background-color: $secondaryColor;
+            background-color: darken(#d47863, 4%);
         }
 
         span {
@@ -462,9 +467,7 @@
 
 
         &.pressed {
-            border: 1px solid $secondaryColor;
-            box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
-            background-color: $secondaryColor;
+            background-color: darken(#d47863, 4%);
         }
 
         .material-icons {
