--- a/resources/assets/sass/views/credits.scss
+++ b/resources/assets/sass/views/credits.scss
@@ -376,7 +376,7 @@ Table of Contents End
 
     .block .table-rose {
         /*background: linear-gradient(60deg, #ec407a, #c2185b);*/
-        background: linear-gradient(60deg, #ef4f2b, #e73911);
+        background: linear-gradient(60deg, #ea6d51, #e07a63);
         border-radius: 6px;
         box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
     }
@@ -428,30 +428,31 @@ Table of Contents End
     /* btn-rose */
     .btn.btn-rose {
         color: #FFFFFF;
-        background-color: #ef4f2b;
-        border-color: #ef4f2b;
-        box-shadow: 0 2px 2px 0 rgba(233, 30, 99, 0.14), 0 3px 1px -2px rgba(233, 30, 99, 0.2), 0 1px 5px 0 rgba(233, 30, 99, 0.12);
+        background-color: #a97469;
+        border: 0;
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-rose:focus,
     .btn.btn-rose:active,
     .btn.btn-rose:hover {
-        box-shadow: 0 14px 26px -12px rgba(233, 30, 99, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(233, 30, 99, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
     /* btn-primary */
     .btn.btn-primary {
         color: #FFFFFF;
-        background-color: #ef4f2b;
         border-color: #ef4f2b;
-        box-shadow: 0 2px 2px 0 rgba(156, 39, 176, 0.14), 0 3px 1px -2px rgba(156, 39, 176, 0.2), 0 1px 5px 0 rgba(156, 39, 176, 0.12);
+        -webkit-box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.54);
+        background: linear-gradient(60deg, #e26c52, #ff9f89)
     }
 
     .btn.btn-primary:focus,
     .btn.btn-primary:active,
     .btn.btn-primary:hover {
-        box-shadow: 0 14px 26px -12px rgba(156, 39, 176, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(156, 39, 176, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
@@ -460,13 +461,13 @@ Table of Contents End
         color: #FFFFFF;
         background-color: #f44336;
         border-color: #f44336;
-        box-shadow: 0 2px 2px 0 rgba(244, 67, 54, 0.14), 0 3px 1px -2px rgba(244, 67, 54, 0.2), 0 1px 5px 0 rgba(244, 67, 54, 0.12);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-danger:focus,
     .btn.btn-danger:active,
     .btn.btn-danger:hover {
-        box-shadow: 0 14px 26px -12px rgba(244, 67, 54, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(244, 67, 54, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
@@ -475,13 +476,13 @@ Table of Contents End
         color: #FFFFFF;
         background-color: #4caf50;
         border-color: #4caf50;
-        box-shadow: 0 2px 2px 0 rgba(76, 175, 80, 0.14), 0 3px 1px -2px rgba(76, 175, 80, 0.2), 0 1px 5px 0 rgba(76, 175, 80, 0.12);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-success:focus,
     .btn.btn-success:active,
     .btn.btn-success:hover {
-        box-shadow: 0 14px 26px -12px rgba(76, 175, 80, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(76, 175, 80, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
@@ -490,13 +491,13 @@ Table of Contents End
         color: #fff;
         background-color: #5bc0de;
         border-color: #5bc0de;
-        box-shadow: 0 2px 2px 0 rgba(0, 188, 212, 0.14), 0 3px 1px -2px rgba(0, 188, 212, 0.2), 0 1px 5px 0 rgba(0, 188, 212, 0.12);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-info:focus,
     .btn.btn-info:active,
     .btn.btn-info:hover {
-        box-shadow: 0 14px 26px -12px rgba(0, 188, 212, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 188, 212, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
@@ -505,13 +506,13 @@ Table of Contents End
         color: #fff;
         background-color: #ff9800;
         border-color: #ff9800;
-        box-shadow: 0 2px 2px 0 rgba(255, 152, 0, 0.14), 0 3px 1px -2px rgba(255, 152, 0, 0.2), 0 1px 5px 0 rgba(255, 152, 0, 0.12);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-warning:focus,
     .btn.btn-warning:active,
     .btn.btn-warning:hover {
-        box-shadow: 0 14px 26px -12px rgba(255, 152, 0, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(255, 152, 0, 0.2);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
@@ -520,13 +521,13 @@ Table of Contents End
         color: #3C4857;
         background-color: #fff;
         border-color: #fff;
-        box-shadow: 0 2px 2px 0 rgba(153, 153, 153, 0.14), 0 3px 1px -2px rgba(153, 153, 153, 0.2), 0 1px 5px 0 rgba(153, 153, 153, 0.12);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
     .btn.btn-white:focus,
     .btn.btn-white:active,
     .btn.btn-white:hover {
-        box-shadow: 0 4px 4px 0 rgba(153, 153, 153, 0.24), 0 3px 1px -2px rgba(153, 153, 153, 0.3), 0 1px 5px 0 rgba(153, 153, 153, 0.32);
+        box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14);
     }
 
 
