--- a/resources/assets/sass/views/credits.scss
+++ b/resources/assets/sass/views/credits.scss
@@ -577,8 +577,7 @@ Table of Contents End
 
     .currentMembers {
         .profileImage {
-            @include roundImage;
-
+            object-fit: cover;
             width: 150px;
             height: 150px;
         }
