fixes, change initial search

--- a/resources/assets/sass/components/user-summary.scss
+++ b/resources/assets/sass/components/user-summary.scss
@@ -129,6 +129,10 @@
             font-size: 19px;
             position: relative;
 
+            &:hover {
+                text-decoration: none;
+            }
+
             .onlineCircle {
                 position: absolute;
                 background-color: #33e23c;
